Fix invisible nav toggle and clean up

--- a/forum/static/scss/styles.scss
+++ b/forum/static/scss/styles.scss
@@ -17,6 +17,14 @@ GLOBAL STYLE
   background-color: lightskyblue;
 }
 
+.register-btn {
+  background-color: #64b5f6;
+  color: #fff;
+}
+.login-btn {
+  background-color: #64b5f6;
+}
+
 .bg-sidebar {
   background-color: #9575CD;
 }
